fix: spacing and copy

--- a/source/assets/styles/utils.scss
+++ b/source/assets/styles/utils.scss
@@ -225,6 +225,10 @@ a.secret-link{
         padding-right:calc(1 * var(--space) * var(--pad)); 
         box-sizing: border-box;
     }
+    
+    > :last-child{
+        padding-bottom:calc(2 * var(--pad));
+    }
 
     > *:not(section, label, button, article,div, .bg-clear, hr){
         background-color: var(--col-bg);
@@ -268,6 +272,7 @@ a.secret-link{
     ){ 
         border-top: solid calc(2 * var(--pad)) var(--col-bg);
     }
+
 }
 
 
